test/org/midica/testfiles/failing/meta-in-macro.midica
INCLUDE_FILE inc/instruments.midica

MACRO test
	0 c /4
	META
		composer	Beethoven
	END
END
